fix top image, and make downloading 10x faster